--- a/example.html
+++ b/example.html
@@ -12,10 +12,18 @@
 <body>
   <noscript>live requires javascript enabled</noscript>
   
-  <input name="name" live-subscription="testlistener:default" live-trigger="change:default" />
+  <input name="testinput" live-subscription="testlistener:example" live-trigger="change:example" />
   
   <script src="live.js"></script>
   <script>
+    window.LiveElement.Live.processors.example = function(input) {
+      switch(window.LiveElement.Live.getHandlerType(input)) {
+          case 'subscription': 
+              return {placeholder: input.payload._timestamp}
+          case 'trigger':
+              console.log(`You changed the value of ${input.attributes.name} to "${input.map['#value']}"`)
+      }
+    }
     window.LiveElement.Live.listeners.testlistener = {processor: 'default', delay: 1000, max: 10}
   </script>
 </body>
